fdo#51514: SwXBookmarks: only consider real bookmarks:

Since CWS swrefactormarks2 the SwXBookmarks collection handles not only
bookmarks but at least cross-ref marks as well, which then bother users
when they show up in the Insert->Hyperlink dialog; remove non-bookmarks
again.
(regression from df6d312ca537402463e4eb0530f22b956600fc02)

Change-Id: I6a64ba8a43468dd3ce1569e944371d3ef71f8824